# midterm-project-inteprog

./: CMakeLists.txt  Function.cpp  Function.h  Function.hpp  Imports.hpp  README.md  main.cpp
Class/: Book.cpp  Book.h  FictionBook.cpp  FictionBook.h  Library.cpp  Library.h  NonFictionBook.cpp  NonFictionBook.h
